# scopeport-server-backup

./: .gitignore  CMakeLists.txt  INSTALL  README
extra/: scopeport-server.conf
src/: .core.cc.swp  CMakeLists.txt  bcpp.conf  core.cc  internal.h
src/cloud/: Cloud.cpp  Cloud.h
src/conversation/: Auth.cpp  Auth.h  Blacklist.cpp  Blacklist.h  Negotiation.cpp  Negotiation.h  ReadData.cpp  ReadData.h
src/database/: Database.cpp  Database.h  Information.cpp  Information.h
src/fallback/: Fallback.cpp  Fallback.h
src/health/: Health.cpp  Health.h
src/host/: Host.cpp  Host.h
src/log/: ConversationDebug.cpp  ConversationDebug.h  Log.cpp  Log.h
src/misc/: Timer.cpp  Timer.h
src/notifications/: .XMPP.cpp.swp  Clickatell.cpp  Clickatell.h  EmergencyNotifications.cpp  EmergencyNotifications.h  GeneralNotifications.cpp  GeneralNotifications.h  Mail.cpp  Mail.h  Warning.cpp  Warning.h  XMPP.cpp  XMPP.h
src/services/: ServiceChecks.cpp  ServiceChecks.h  Services.cpp  Services.h
src/snmp/: fetchSNMP.cpp  fetchSNMP.h  spreadSNMP.cpp  spreadSNMP.h
